# xyz_validator

./: CRATES.IO.md  Cargo.toml  LICENSE-APACHE.rs  LICENSE-MIT  README.md  crates.io.md
.github/workflows/: ci.yml
src/: interfaces.rs  lib.rs  main.rs  rql_validator.rs
src/interfaces/: validator_interface.rs
