[package]
name = "xyz_validator"
version = "0.1.0"
authors = ["Stanislav Polaniev"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A set of validators. Currently Resource Query Language (RQL) validator is implemented."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
