[package]
name = "xyz_validator"
version = "0.3.0"
authors = ["Stanislav Polaniev"]
edition = "2021"
description = "A set of validators. Currently, only Resource Query Language (RQL) validator is implemented."
readme = "CRATES.IO.md"
repository = "https://github.com/spolanyev/xyz_validator"
license = "MIT OR Apache-2.0"
keywords = ["xyz_validator", "rql", "validation"]
categories = ["web-programming", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
